# BuymeProject

./: .gitignore  README.md  pyproject.toml
pages/: base_page.py  business_page.py  driver.json  home_screen.py  login_page.py  selection_page.py
test/: Buyme.py  conftest.py
